--- a/.travis.yml
+++ b/.travis.yml
@@ -1,16 +1,15 @@
 dist: xenial
 language: cpp
-compiler:
-  - clang
-addons :
+compiler: clang
+addons:
   apt:
     packages:
-      - libboost-test-dev
+    - libboost-test-dev
 script:
   - cmake .
   - cmake --build .
-  - cmake --build . -- target test
-  - cmake --build . -- target package
+  - cmake --build . --target test
+  - cmake --build . --target package
 deploy:
   provider: script
   skip_cleanup: true
