--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -17,37 +17,35 @@ set_target_properties(
         CXX_STANDARD 17
         CXX_STANDARD_REQUIRED ON
         COMPILE_OPTIONS "-Wpedantic;-Wall;-Wextra"
-        )
+)
 
 set_target_properties(unit_test_ci_cd PROPERTIES
-        COMPILE_DEFINiTIONS BOOST_TEST_DYN_LINK
+        COMPILE_DEFINITIONS BOOST_TEST_DYN_LINK
         INCLUDE_DIRECTORIES ${Boost_INCLUDE_DIR}
-)
+        )
 
-target_link_libraries(
-        helloworld_ci_cd_test
+target_link_libraries(helloworld_ci_cd_test
         helloworld_ci_cd_test_lib
         Threads::Threads
-)
+        )
 
-target_link_libraries(
-        unit_test_ci_cd
+target_link_libraries(unit_test_ci_cd
         ${Boost_LIBRARIES}
         helloworld_ci_cd_test_lib
 
-)
+        )
 
 install(TARGETS helloworld_ci_cd_test RUNTIME DESTINATION bin)
 
 set(CPACK_GENERATOR DEB)
 
 set(CPACK_PACKAGE_VERSION_MAJOR "${PROJECT_VERSION_MAJOR}")
-set(CPACK_PACKAGE_VERSION_MAJOR "${PROJECT_VERSION_MINOR}")
-set(CPACK_PACKAGE_VERSION_MAJOR "${PROJECT_VERSION_PATCH}")
+set(CPACK_PACKAGE_VERSION_MINOR "${PROJECT_VERSION_MINOR}")
+set(CPACK_PACKAGE_VERSION_PATCH "${PROJECT_VERSION_PATCH}")
 
 set(CPACK_PACKAGE_CONTACT dimkysh@gmail.com)
 
-set(CPACK_DEBIAN_PACKAGE_SHILIBDEPS ON)
+set(CPACK_DEBIAN_PACKAGE_SHLIBDEPS ON)
 
 include(CPack)
 
