--- a/.travis.yml
+++ b/.travis.yml
@@ -14,4 +14,4 @@ deploy:
   provider: script
   skip_cleanup: true
   script:
-    - curl -f -T helloworld_ci_cd_test.0.0$TRAVIS_BUILD_NUMBER-Linux.deb -dimkush:$BINTRAY_API_KEY "https://api.bintray.com/content/dimkush/TestBuildHome/cicd-test/$TRAVIS_BUILD_NUMBER/helloworld_ci_cd_test.0.0$TRAVIS_BUILD_NUMBER-Linux.deb;deb_distribution=xenial; deb_component=main;deb_architecture=amd64;publish=1"
+    - curl -f -T helloworld_ci_cd_test.0.0.$TRAVIS_BUILD_NUMBER-Linux.deb -dimkush:$BINTRAY_API_KEY "https://api.bintray.com/content/dimkush/TestBuildHome/cicd-test/$TRAVIS_BUILD_NUMBER/helloworld_ci_cd_test.0.0.$TRAVIS_BUILD_NUMBER-Linux.deb;deb_distribution=xenial;deb_component=main;deb_architecture=amd64;publish=1"
